Update policy file inputs: make file name selectable, path read-only, and convert to tabular format

--- a/core/templates/insurance/template.html
+++ b/core/templates/insurance/template.html
@@ -16,14 +16,14 @@
                 <svg class="mr-1 lg:mr-1.5 h-3 w-3 lg:h-4 lg:w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
                 </svg>
-                <span class="text-xs">+ СОНГОЛТ НЭМЭХ</span>
+                <span class="text-xs">СОНГОЛТ НЭМЭХ</span>
             </button>
             {% if perms.core.add_ref_policy_template %}
             <button id="btn-add-template" class="inline-flex items-center px-2 py-1 lg:px-3 lg:py-1.5 bg-blue-600 text-white text-xs font-medium rounded hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                 <svg class="mr-1 lg:mr-1.5 h-3 w-3 lg:h-4 lg:w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
                 </svg>
-                <span class="text-xs">+ ЗАГВАР НЭМЭХ</span>
+                <span class="text-xs">ЗАГВАР НЭМЭХ</span>
             </button>
             {% endif %}
         </div>
@@ -82,7 +82,7 @@
                 <svg class="mr-1 lg:mr-1.5 h-3 w-3 lg:h-4 lg:w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" style="color: rgb(255, 255, 255) !important;">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
                 </svg>
-                <span class="text-xs" style="color: rgb(255, 255, 255) !important;">+ НЭМЭХ</span>
+                <span class="text-xs" style="color: rgb(255, 255, 255) !important;">НЭМЭХ</span>
             </button>
         </div>
 
